--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Portfolio</title>
@@ -29,7 +29,7 @@
         <div class="content">
           <div class="example">
             <p class="title">La Mode</p>
-            <img class="ex_pic"src="imgs/lamode.png" alt="picture not found">
+            <img class="ex_pic" src="imgs/lamode.png" alt="picture not found">
             <p class="pi">La Mode is anEcommerce website for designed to market
               various clothing products. Users are able to view the available
               garments, select their desired quantitly, and compile a shopping
